--- a/assets/theme/css/style.css
+++ b/assets/theme/css/style.css
@@ -703,10 +703,10 @@ input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:foc
 .mbr-section-hero .mbr-section-text {
   color: #fff; }
 
-@media (max-width: 767px) {
+@media (max-width: 100%) {
   .mbr-section {
-    padding-top: 60px;
-    padding-bottom: 60px; }
+    padding-top: 100px;
+    padding-bottom: 100px; }
 
   .mbr-section-full {
     padding-bottom: 0;
